config/default/validation_policies/dataplane_validation_policies.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: ports.dataplane.gateway-operator.konghq.com
spec:
  matchConstraints:
    resourceRules:
      - apiGroups:
          - "gateway-operator.konghq.com"
        apiVersions:
          - "v1beta1"
        operations:
          - "CREATE"
          - "UPDATE"
        resources:
          - "dataplanes"
  variables:
  - name: ingressPorts
    expression: object.spec.network.services.ingress.ports
  - name: podTemplateSpec
    expression: object.spec.deployment.podTemplateSpec
  - name: proxyContainer
    expression: |
      variables.podTemplateSpec.spec.containers.exists(c, c.name == 'proxy') ?
        variables.podTemplateSpec.spec.containers.filter(c, c.name == 'proxy')[0] :
        null
  - name: envFilteredPortMaps
    expression: |
      variables.proxyContainer.env.filter(e, e.name == "KONG_PORT_MAPS")
  - name: envFilteredProxyListen
    expression: |
      variables.proxyContainer.env.filter(e, e.name == "KONG_PROXY_LISTEN")
  - name: envPortMaps
    expression: |
      variables.envFilteredPortMaps.size() > 0 ? variables.envFilteredPortMaps[0] : null
  - name: envProxyListen
    expression: |
      variables.envFilteredProxyListen.size() > 0 ? variables.envFilteredProxyListen[0] : null
  # Using string functions from: https://pkg.go.dev/github.com/google/cel-go/ext
  validations:
  - messageExpression: "'Each port from spec.network.services.ingress.ports has to have an accompanying port in KONG_PORT_MAPS env'"
    expression: |
        variables.ingressPorts == null ||
        variables.envPortMaps == null ||
        variables.ingressPorts.all(p, variables.envPortMaps.value.
                  split(",").
                  exists(pm,
                      pm.split(":")[1].trim() == string(p.targetPort)
                      )
                  )
    reason: Invalid
  - messageExpression: "'Each port from spec.network.services.ingress.ports has to have an accompanying port in KONG_PROXY_LISTEN env'"
    expression: |
        variables.ingressPorts == null ||
        variables.envProxyListen == null ||
        variables.ingressPorts.all(p, variables.envProxyListen.value.
                  split(",").
                  exists(pm,
                    pm.trim().split(" ")[0].split(":")[1].trim() == string(p.targetPort)
                    )
                  )
    reason: Invalid
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: binding-ports.dataplane.gateway-operator.konghq.com
spec:
  policyName: ports.dataplane.gateway-operator.konghq.com
  validationActions:
  - Deny
---
